# linux-assistant

./: pyproject.toml
src/linux_assistant/: __init__.py  app.py  config.json
src/linux_assistant/graph/: nodes.py
src/linux_assistant/models/: config.py  model_nodes.py  system_prompts.py
src/linux_assistant/utils/: config_handler.py  console_utils.py
