[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-assistant"
version = "0.1.3"
description = "An AI-powered natural-language Linux assistant"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ali Fathi Jahromi", email = "alifathijahromi@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["langchain==1.3.9",
                "click==8.4.1",
                "pyfiglet==1.0.4",
                "rich==15.0.0",
                "prompt_toolkit==3.0.52",
                "questionary==2.1.1",
                "langchain_community==0.4.2",
                "ddgs==9.14.4",
                "huggingface_hub==1.19.0",
"wikipedia==1.4.0"]

[project.scripts]
linux-assistant = "linux_assistant.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]